# ringer

./: .gitignore  README.md  config.sample.toml  ringer.py
.claude/skills/ringer/: SKILL.md
.github/workflows/: release.yml
dashboard/: dashboard.html  ringside.html
docs/: MODEL-NOTES.md  TAXONOMY.md
engines/: pi-sandboxed.sh
hud/: Cargo.toml  README.md  tauri.conf.json
hud/frontend/: hud.js
hud/scripts/: sync-dist.sh
hud/src/: main.rs
registry/: model-identity.toml
scripts/: backfill_model_log.py
tests/: test_artifact_wrappers.py  test_catalog.py  test_design_reference.py  test_model_db.py  test_model_field.py  test_model_log.py  test_plain_english_artifact.py  test_scoreboard_page.py  test_taxonomy.py
tests/fixtures/: design-reference.html
