[package]
name = "ringside"
version = "0.1.0"
description = "Ringside mission-control HUD for Ringer"
authors = ["Jonathan Edwards"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
toml = "0.9.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
